gatekeeper/constraints/custom-max-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: deployment-max-replicas
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    excludedNamespaces:
    - kube-system
    - kube-public
    - kube-node-lease
    - argocd
    - gatekeeper-system
    - monitoring
    - argo-rollouts
  parameters:
    maxReplicas: 5
