gatekeeper/constraints/disallow-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: disallow-host-network
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    excludedNamespaces:
    - kube-system
    - kube-public
    - kube-node-lease
    - argocd
    - gatekeeper-system
    - monitoring
    - argo-rollouts
  parameters:
    hostNetwork: false
