gatekeeper/constraints/disallow-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: disallow-latest-tag
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    excludedNamespaces:
    - kube-system
    - kube-public
    - kube-node-lease
    - argocd
    - gatekeeper-system
    - monitoring
    - argo-rollouts
  parameters:
    tags:
    - latest
